Move examples, Link wiki

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-/Example/enc_temp_folder/
-/Example/x64/
-/Example/Release/
-/Example/Debug/
-/Example/.vs/
-/Example/Config.json
-/Example/Program.vcxproj.user
+enc_temp_folder/
+x64/
+Release/
+Debug/
+.vs/
+*.json
+*.vcxproj.user
 /include/rapidjson
